[gd_scene load_steps=7 format=3 uid="uid://cxbxrwvsg5xpv"]

[ext_resource type="PackedScene" uid="uid://dnm3jpqa7k30c" path="res://menus/Options/settings_tab.tscn" id="1_bgu4d"]
[ext_resource type="Script" path="res://menus/Options/option_menu.gd" id="1_drq1f"]
[ext_resource type="Material" uid="uid://dw5ry2b5wv5ra" path="res://RogueFroggerAssets/RFAssets/shaders/blur.tres" id="2_viuqr"]

[sub_resource type="Animation" id="Animation_wqa0x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blur:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_f5j0v"]
resource_name = "startpause"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blur:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_we8tw"]
_data = {
"RESET": SubResource("Animation_wqa0x"),
"startpause": SubResource("Animation_f5j0v")
}

[node name="option_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_drq1f")

[node name="blur" type="ColorRect" parent="."]
material = ExtResource("2_viuqr")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -48

[node name="Settings" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings_Tabs" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_bgu4d")]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Exit"

[node name="ResetTab" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Reset Tab
"

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Save
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_we8tw")
}

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ResetTab" to="." method="_on_reset_tab_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Save" to="." method="_on_save_pressed"]
